# Peano4

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile.am  README.md  configure.ac  configure.py  format.py  pyproject.toml  requirements.txt
kernel-tests/: CMakeLists.txt  KernelBenchmarksFVRusanov-main.cpp
kernel-tests/acoustic-wave/: exahype.log-filter  kernel-benchmarks-fv-rusanov.py  test_and_plot.py
kernel-tests/elastic-wave/: CMakeLists.txt  kernel-benchmarks-fv-rusanov.py
kernel-tests/euler/: KernelBenchmarksFVRusanov-main.cpp  kernel-benchmarks-fv-rusanov.py  test.py  test_and_plot.py  test_and_plot_x_num_of_patches.py  test_and_plot_x_patchsize.py
kernel-tests/euler/results-hpc-ext/: test_results_d_2.json  test_results_d_3.json
kernel-tests/euler/results-source-to-source-transform/: test_results_d_2.json  test_results_d_3.json
kernel-tests/swe/: CMakeLists.txt  KernelBenchmarksFVRusanov-main.cpp  README.dox  kernel-benchmarks-fv-rusanov.py
src/: CMakeLists.txt  Makefile.am  cmake.config.h.in
src/convert/: CMakeLists.txt  convert.cpp
src/convert/data/: DataSet.h  PatchData.h  Variable.h
src/convert/filter/: ConvertTreeIdIntoDataField.h  Copy.h  Filter.h  Intersection.h  SelectValue.h  SeparateResolutions.h
src/convert/input/: MetaFileReader.h  Parser.h  PatchFileReader.h  PeanoTextPatchFileReader.h
src/convert/output/: PeanoWriter.cpp  PeanoWriter.h  VTUWriter.cpp  VTUWriter.h  Writer.h
src/exahype2/: CMakeLists.txt  CellAccess.cpp  CellAccess.h  CellData.cpp  CellData.h  EnclaveBookkeeping.cpp  EnclaveBookkeeping.h  EnclaveTask.cpp  EnclaveTask.h  LoadBalancingConfiguration.cpp  LoadBalancingConfiguration.h  Makefile.am  PlotFilter.h  PrecisionControl.cpp  PrecisionControl.h  RefinementControl.cpp  RefinementControl.h  RefinementControlService.cpp  RefinementControlService.h  Solver.h  TimeStepping.cpp  TimeStepping.h  UnitTests.cpp  UnitTests.h  UserInterface.cpp  UserInterface.h  VolumeIndex.h
src/exahype2/dg/: BoundaryConditions.cpp  BoundaryConditions.h  CellIntegral.cpp  CellIntegral.cpph  CellIntegral.h  DGUtils.cpp  DGUtils.cpph  DGUtils.h  Functors.h  Riemann.cpp  Riemann.h  Tracer.cpph  Tracer.h  dg.h
src/exahype2/enumerator/: AoSLexicographicEnumerator.cpp  AoSLexicographicEnumerator.h  AoSoALexicographicEnumerator.cpp  AoSoALexicographicEnumerator.h  FaceAoSLexicographicEnumerator.cpp  FaceAoSLexicographicEnumerator.h  SingleDoFEnumerator.cpp  SingleDoFEnumerator.h  SoALexicographicEnumerator.cpp  SoALexicographicEnumerator.h  enumerator.h
src/exahype2/fd/: BoundaryConditions.cpp  BoundaryConditions.h  FD_Helper.cpph  Functors.h  LoopBody.cpp  LoopBody.cpph  LoopBody.h  PatchUtils.cpp  PatchUtils.h
src/exahype2/fv/: BoundaryConditions.cpp  BoundaryConditions.h  InterpolationRestriction.h  PatchUtils.cpp  PatchUtils.h  PostprocessingKernels.cpp  PostprocessingKernels.h  Tracer.cpp  Tracer.cpph  Tracer.h
src/exahype2/tests/: KernelLaunchTest.cu  KernelLaunchTest.h
src/mghype/: Makefile.am  __init__.py  mghype.cpp  mghype.cpph  mghype.h
src/mghype/api/: __init__.py
src/peano4/: CMakeLists.txt  UnitTests.cpp  UnitTests.h  peano.cpp  peano.h
src/peano4/datamanagement/: CellMarker.cpp  CellMarker.h  FaceEnumerator.h  FaceMarker.cpp  FaceMarker.h  VertexEnumerator.h  VertexMarker.cpp  VertexMarker.h
src/peano4/grid/: AutomatonState.cpp  AutomatonState.h  EmptyTraversalObserver.cpp  EmptyTraversalObserver.h  GridControlEvent.cpp  GridControlEvent.h  GridStatistics.cpp  GridStatistics.h  GridTraversalEvent.cpp  GridTraversalEvent.h  GridTraversalEventGenerator.cpp  GridTraversalEventGenerator.h  GridVertex.cpp  GridVertex.h  LoadStoreComputeFlag.cpp  LoadStoreComputeFlag.h  PeanoCurve.h  Spacetree.cpp  Spacetree.h  TraversalObserver.h  TraversalVTKPlotter.cpp  TraversalVTKPlotter.h  grid.cpp  grid.h
src/peano4/maps/: HierarchicalStackMap.h  STDStackMap.h  maps.h
src/peano4/parallel/: Node.cpp  Node.h  SpacetreeSet.cpp  SpacetreeSet.cpph  SpacetreeSet.h  StartTraversalMessage.cpp  StartTraversalMessage.h  TreeEntry.cpp  TreeEntry.h  TreeManagementMessage.cpp  TreeManagementMessage.h  parallel.cpp  parallel.h
src/peano4/stacks/: STDVectorOverContainerOfPointers.cpph  STDVectorOverContainerOfPointers.h  STDVectorStack.cpp  STDVectorStack.h  STDVectorStackOverSmartPointers.cpph  STDVectorStackOverSmartPointers.h  stacks.h
src/peano4/utils/: Globals.h  Loop.cpp  Loop.h
src/petsc/: CMakeLists.txt  LinearEquationSystem.cpp  LinearEquationSystem.h  LocalToGlobalMap.cpp  LocalToGlobalMap.h  Makefile.am  UnitTests.cpp  UnitTests.h  petsc.cpp  petsc.h
src/swift2/: CMakeLists.txt  GridControlEvents.cpp  GridControlEvents.h  Makefile.am  ParticleSpecies.cpp  ParticleSpecies.h  TaskEnumerator.cpp  TaskEnumerator.h  TaskNumber.cpp  TaskNumber.cpph  TaskNumber.h  UnitTests.cpp  UnitTests.h  UserInterface.cpp  UserInterface.h  swift2.cpp  swift2.h
src/swift2/boundaryconditions/: FixedBoundary.cpp  FixedBoundary.cpph  FixedBoundary.h  Utils.cpp  Utils.h
src/swift2/dependencychecks/: DependencyChecks.cpp  DependencyChecks.cpph  DependencyChecks.h
src/swift2/kernels/: ParticleParticleInteraction.cpph  ParticleSearchRadiusCalculation.cpph  ParticleSearchRadiusCalculation.h  ParticleSelfInteraction.cpp  ParticleSelfInteraction.cpph  ParticleSelfInteraction.h  ParticleSetIterators.cpp  ParticleSetIterators.cpph  ParticleSetIterators.h  ParticleUpdatePredicates.h
src/tarch/: Assertions.h  CMakeLists.txt  Enumerator.cpp  Enumerator.h  NonCriticalAssertions.cpp  NonCriticalAssertions.h  UnitTests.cpp  UnitTests.h  tarch.cpp  tarch.h
src/tarch/la/: Matrix.h  (+22 more)
src/tbb/: Makefile.am  dynamic_task_graph.cpp  dynamic_task_graph.h  dynamic_task_graph_node.cpp  dynamic_task_graph_node.h  dynamic_task_graph_node_repository.cpp  dynamic_task_graph_node_repository.h  dynamic_task_graph_spawned_node.cpp  dynamic_task_graph_spawned_node.h  dynamic_task_graph_utils.cpp  dynamic_task_graph_utils.h
src/toolbox/: CMakeLists.txt
src/unittests/: CMakeLists.txt  Makefile.am  main.cpp
(+1607 files in other folders)
